--- a/DXRPathTracer/DXRPathTracer.vcxproj
+++ b/DXRPathTracer/DXRPathTracer.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneLoader.h" />
+    <ClInclude Include="stb_image_write.h" />
     <ClInclude Include="timer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,12 @@
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </EntryPointName>
     </FxCompile>
+    <None Include="DXRShader1.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="DXRShader_nee.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
